@@ -1,3 +1,8 @@
+Thu May 17 13:36:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * XSC/Parser.cpp:
+          Some changes
+
 Thu May 17 13:03:10 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * XSC/Parser.cpp:
